[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["yuichiro12 <talcnrhyme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.4"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
scipy = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
