[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["yuichiro12 <talcnrhyme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.4"
jupyter = "^1.0.0"
scipy = "^1.9.2"
matplotlib = "^3.6.2"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
